--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,32 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+  <ion-toolbar color="primary">
+    <ion-title >
+      MedicoSys
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content [fullscreen]="true" class="ion-padding">
+<ion-list>
+  <ion-item *ngIf="agenda.length < 1">
+    <ion-label>Não Há Medicos</ion-label> 
+  </ion-item>
+  <ion-item-sliding *ngFor="let agenda of agenda">
+    <ion-item (click)="Consultas()">
+      <ion-label >{{agenda.nome}} - {{agenda.funcao}}</ion-label>
+      
+           
+    </ion-item>
+    <ion-item-options side="start">
+      <ion-item-option color="danger" (click)="excluir(agenda)">
+        Excluir
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-list>
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="secondary" (click)="addMedico()">
+    <ion-icon name="finger-print"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 </ion-content>
